k8s/tools/block-aws/block-aws-cron.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: meaocron
