k8s/tools/block-aws/block-aws-networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: NetworkPolicy
  metadata:
    name: block-aws
  spec:
    egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - 169.254.0.0/16
    podSelector:
      matchExpressions:
      - key: k8s-app
        operator: DoesNotExist
    policyTypes:
    - Egress
kind: List
